# Rust-to-Rocq translation for formal verification
#
# This directory contains Rust code that gets translated to Rocq using rocq-of-rust,
# allowing us to prove properties about LOOM's core types and algorithms.

load("@rules_rocq_rust//coq_of_rust:defs.bzl", "coq_of_rust_library", "rocq_rust_verified_library")
load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library")

# RocqOfRust library - provides the core types needed by translated code
alias(
    name = "rocq_of_rust_lib",
    actual = "@rocq_of_rust_source//:rocq_of_rust_main",
)

# =============================================================================
# Value Types - Core LOOM type system
# =============================================================================

# Step 1: Translate Rust to Rocq
coq_of_rust_library(
    name = "value_types_translated",
    rust_sources = ["value_types.rs"],
    edition = "2021",
)

# Step 2: Compile the translated Rocq code
rocq_library(
    name = "value_types",
    srcs = [":value_types_translated"],
    deps = [":rocq_of_rust_lib"],
    include_path = "loom",  # Allow importing as "loom.value_types"
    extra_flags = ["-impredicative-set"],
    visibility = ["//proofs:__pkg__"],
)

# Step 3: Proofs about ValueType properties (pure model)
# These proofs use a pure Rocq model that mirrors the Rust implementation,
# proving key properties like is_float = !is_integer, same_repr symmetry, etc.
rocq_library(
    name = "value_types_proofs",
    srcs = ["value_types_proofs.v"],
    visibility = ["//proofs:__pkg__"],
)

# Step 4: Proofs about the translated code structure
# These proofs import the generated value_types.v and reason about
# the actual translated functions, module structure, and trait implementations.
rocq_library(
    name = "value_types_translated_proofs",
    srcs = ["value_types_translated_proofs.v"],
    deps = [
        ":value_types",
        ":rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
    visibility = ["//proofs:__pkg__"],
)

# =============================================================================
# Stack Signature - Core stack validation logic
# =============================================================================

# Translate stack_signature.rs to Rocq
coq_of_rust_library(
    name = "stack_signature_translated",
    rust_sources = ["stack_signature.rs"],
    edition = "2021",
)

# Compile the translated stack signature code
rocq_library(
    name = "stack_signature",
    srcs = [":stack_signature_translated"],
    deps = [":rocq_of_rust_lib"],
    include_path = "loom",
    extra_flags = ["-impredicative-set"],
    visibility = ["//proofs:__pkg__"],
)

# Proofs about stack signature composition
rocq_library(
    name = "stack_signature_proofs",
    srcs = ["stack_signature_proofs.v"],
    visibility = ["//proofs:__pkg__"],
)
